# mtok

./: .gitignore  pyproject.toml
.github/workflows/: publish-on-pip.yml
src/mtok/: helpers.py  mtok.py
